# pyforge-test

./: .gitignore  FUTURE_UPDATES.md  MANIFEST.in  QUICK_START.md  README.md  TESTING_GUIDE.md  pyproject.toml
.github/instructions/: pyforge.instructions.md
src/: __init__.py  main.py
src/core/: __init__.py  collector.py  main.py  registry.py  reporter.py  runner.py
tests/: __init__.py  test_basic.py
