[project]
name = "pyforge-test"
version = "0.1.0"
description = "A lightweight Python unit testing framework built from scratch."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Ertan Tunç Türk" }
]

dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/ertanturk/pyforge-test"

[project.scripts]
pyforge = "pyforge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "mypy",
    "ruff"
]

# ----------------------
# Ruff Configuration
# ----------------------

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplifications
    "RUF",  # Ruff-specific rules
    "PL",   # pylint subset
    "ARG"   # unused arguments
]

ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"